Deployment/alternateid.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alternateid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alternateid
  template:
    metadata:
      labels:
        app: alternateid
    spec:
      volumes:
      - name: secret-volume
        secret:
          secretName: dotfile-secret
      containers:
      - name: alternateid
        image: $ACRNAME.azurecr.io/contoso-demo-alternate-id-service:v1
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
        volumeMounts:
            - name: secret-volume
              readOnly: true
              mountPath: "/etc/secret-volume"
---
apiVersion: v1
kind: Service
metadata:
  name: alternateid
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: alternateid
