Deployment/app3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: aspnetapp3
  labels:
    app: aspnetapp3
spec:
  containers:
    - image: 'mcr.microsoft.com/dotnet/core/samples:aspnetapp'
      name: aspnetapp3
      ports:
        - containerPort: 80
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: aspnetapp3
spec:
  selector:
    app: aspnetapp3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
