Deployment/customerservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customerservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customerservice
  template:
    metadata:
      labels:
        app: customerservice
    spec:
      volumes:
      - name: secrets-store-customerservice
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "azure-kvname-podid"
      containers:
      - name: customerservice
        image: $ACRNAME.azurecr.io/contoso-demo-website:$VERSION
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
        volumeMounts:
            - name: secrets-store-customerservice
              mountPath: "/mnt/secrets-store"
              readOnly: true
        livenessProbe:
          httpGet:
            path: /health
            port: 80
        readinessProbe:
          httpGet:
            path: /health
            port: 80              
---
apiVersion: v1
kind: Service
metadata:
  name: customerservice
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: customerservice
