Deployment/load-balancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: $IP_RESOURCE_GROUP
  name: azure-load-balancer
spec:
  loadBalancerIP: $IP_ADDRESS
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: azure-load-balancer
