Deployment/memberservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memberservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memberservice
  template:
    metadata:
      labels:
        app: memberservice
    spec:
      volumes:
      - name: secrets-store-memberservice
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "azure-kvname-podid"
      containers:
      - name: memberservice
        image: $ACRNAME.azurecr.io/contoso-demo-member-service:$VERSION
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
        volumeMounts:
            - name: secrets-store-memberservice
              mountPath: "/mnt/secrets-store"
              readOnly: true
        livenessProbe:
          httpGet:
            path: /health
            port: http
        readinessProbe:
          httpGet:
            path: /health
            port: http              
---
apiVersion: v1
kind: Service
metadata:
  name: memberservice
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: memberservice
