Deployment/external-ingress-agw2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: $NAMESPACE
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  tls:
    - hosts:
        - $API_DOMAIN
      secretName: aks-api-tls  
  rules:
    - host: $API_DOMAIN
      http:
        paths:
          - backend:
              service:
                name: aspnetapp
                port:
                  number: 80
            path: /foo/(.*)
            pathType: Prefix
