Deployment/ing3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - host: 'prd.contoso.net'
      http:
        paths:
          - path: /
            backend:
              service:
                name: aspnetapp3
                port:
                  number: 80
            pathType: Prefix
